@@ -4,6 +4,7 @@
   	  Improve genMinusDec.
   	  Skip writing to DPTR if it already has the correct value.
   	  Additional genMinusDec improvements.
+  	  Renamed several variables in genPointerSet.
 
 2025-05-03 Gabriele Gorla <gorlik@yahoo.com>
 
